--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build: ./server1-app
     container_name: server1-app
     ports:
-      - "3000:3000"    # Host port 3000 maps to container port 3000
+      - "3000:3000"
     depends_on:
       - elasticsearch
       - otel-collector
@@ -15,7 +15,7 @@ services:
     build: ./server2-app
     container_name: server2-app
     ports:
-      - "3001:3000"    # Host port 3001 maps to container port 3000 inside server2-app
+      - "3001:3000"
     depends_on:
       - elasticsearch
       - otel-collector
@@ -37,15 +37,14 @@ services:
     image: docker.elastic.co/kibana/kibana:8.4.0
     container_name: kibana
     ports:
-    - "5601:5601"
+      - "5601:5601"
     depends_on:
-    - elasticsearch
+      - elasticsearch
     environment:
-    - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
-    - XPACK_ENCRYPTEDSAVEDOBJECTS_ENCRYPTIONKEY="abcdefghijklmnopqrstuvwxzy123456"
-    - XPACK_REPORTING_ENCRYPTIONKEY="abcdefghijklmnopqrstuvwxzy123456"
-    - XPACK_SECURITY_ENCRYPTIONKEY="abcdefghijklmnopqrstuvwxzy123456"
-
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+      - XPACK_ENCRYPTEDSAVEDOBJECTS_ENCRYPTIONKEY="abcdefghijklmnopqrstuvwxzy123456"
+      - XPACK_REPORTING_ENCRYPTIONKEY="abcdefghijklmnopqrstuvwxzy123456"
+      - XPACK_SECURITY_ENCRYPTIONKEY="abcdefghijklmnopqrstuvwxzy123456"
 
   otel-collector:
     image: otel/opentelemetry-collector-contrib:latest
@@ -58,3 +57,5 @@ services:
       - "4318:4318"
     depends_on:
       - elasticsearch
+    environment:
+      - DEPLOYMENT_ENV=production   # set the DEPLOYMENT_ENV variable
